--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,7 @@
 
   </head>
     <body onload="onLoad()">
+      <img src="https://freepikpsd.com/wp-content/uploads/2019/10/sample-png-file-2-Transparent-Images.png">
       {% include themeSelector.html %}
       {{ content }}
     </body>
