--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,8 +43,8 @@
 
   </head>
     <body onload="onLoad()">
-      <img src="https://freepikpsd.com/wp-content/uploads/2019/10/sample-png-file-2-Transparent-Images.png">
+      <img src="https://freepikpsd.com/wp-content/uploads/2019/10/sample-png-file-2-Transparent-Images.png" style="height:120px;margin-left:20%">
       {% include themeSelector.html %}
       {{ content }}
     </body>
-</html>
+</html>hei
