Updated Resume link viewing

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,7 +10,8 @@
         </a>
       </li>
       <li>
-        <a href = "{{ site.resume_url | relative_url }}">
+        <!--a href = "{{ site.resume_url | relative_url }}"-->
+         <iframe src="https://docs.google.com/gview?url= https://github.com/samkj/samkj.github.io/raw/fb921ae02d489de773315718947a5fd9df6dcd78/Samir_s_CV.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
           Resume
         </a>
       </li>
